[gd_scene load_steps=13 format=3 uid="uid://iohi0not48gn"]

[ext_resource type="Script" path="res://Assets/Scripts/gui.gd" id="1_g154o"]
[ext_resource type="FontFile" uid="uid://bbuvge2p1vl7p" path="res://Assets/Fontpack/linux-libertine/LinLibertine_5.3.0_2012_07_02/LinLibertineOTF_5.3.0_2012_07_02/LinLibertine_I.otf" id="2_1swpd"]
[ext_resource type="AudioStream" uid="uid://cutecitrj26oo" path="res://Assets/Audio/gameover.wav" id="2_hcf7f"]
[ext_resource type="PackedScene" uid="uid://dm1cd2ob3gs4v" path="res://Scenes/control.tscn" id="2_tiwek"]
[ext_resource type="AudioStream" uid="uid://b2w7bhvqw0622" path="res://Assets/Audio/VictorySound.wav" id="4_1po1d"]

[sub_resource type="LabelSettings" id="LabelSettings_b4loq"]
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_r7x4g"]
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jfglp"]
font_size = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h1v8j"]
bg_color = Color(0.122675, 0.0375626, 2.10572e-08, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y5dmo"]
bg_color = Color(0.122675, 0.0375626, 2.10572e-08, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bu4j7"]
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_odttc"]
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="GUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_g154o")

[node name="Control" parent="." instance=ExtResource("2_tiwek")]

[node name="Container" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Container"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.982343, 0.982342, 0.982342, 1)
theme_override_fonts/font = ExtResource("2_1swpd")
theme_override_font_sizes/font_size = 14
text = "SCORE: 0000"
label_settings = SubResource("LabelSettings_b4loq")
horizontal_alignment = 1

[node name="Pause" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0, 0, 1)

[node name="Container" type="VBoxContainer" parent="Pause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -29.0
offset_right = 61.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="Label" type="Label" parent="Pause/Container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1swpd")
text = "PAUSA"
label_settings = SubResource("LabelSettings_r7x4g")
horizontal_alignment = 1

[node name="Run" type="Label" parent="Pause/Container"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_1swpd")
text = "VIDA NÚMERO: "
label_settings = SubResource("LabelSettings_jfglp")
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="Pause/Container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Restart" type="Button" parent="Pause/Container/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1swpd")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_h1v8j")
text = "Reiniciar"

[node name="Resume" type="Button" parent="Pause/Container/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1swpd")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_h1v8j")
text = "Reanudar"

[node name="Exit" type="Button" parent="Pause/Container/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1swpd")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_y5dmo")
text = "Salir"

[node name="GameOver" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0, 0, 1)

[node name="Container" type="VBoxContainer" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -29.0
offset_right = 61.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GameOver/Container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1swpd")
text = "FIN DEL JUEGO"
label_settings = SubResource("LabelSettings_bu4j7")
horizontal_alignment = 1

[node name="Run" type="Label" parent="GameOver/Container"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_1swpd")
text = "VIDA NÚMERO: "
label_settings = SubResource("LabelSettings_jfglp")
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="GameOver/Container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Restart" type="Button" parent="GameOver/Container/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1swpd")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_h1v8j")
text = "Reiniciar"

[node name="Exit" type="Button" parent="GameOver/Container/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1swpd")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_y5dmo")
text = "Salir"

[node name="Sound" type="AudioStreamPlayer2D" parent="GameOver"]
stream = ExtResource("2_hcf7f")
max_distance = 4000.0
attenuation = 1e-05

[node name="Victory" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0, 0, 1)

[node name="Container" type="VBoxContainer" parent="Victory"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -29.0
offset_right = 61.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Victory/Container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1swpd")
text = "¡HAS GANADO!"
label_settings = SubResource("LabelSettings_odttc")
horizontal_alignment = 1

[node name="Run" type="Label" parent="Victory/Container"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_1swpd")
text = "VIDA NÚMERO: "
label_settings = SubResource("LabelSettings_jfglp")
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="Victory/Container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Restart" type="Button" parent="Victory/Container/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1swpd")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_h1v8j")
text = "Reiniciar"

[node name="Exit" type="Button" parent="Victory/Container/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1swpd")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_y5dmo")
text = "Salir"

[node name="Sound" type="AudioStreamPlayer2D" parent="Victory"]
stream = ExtResource("4_1po1d")
max_distance = 4000.0
attenuation = 1e-05

[connection signal="pressed" from="Pause/Container/Buttons/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Pause/Container/Buttons/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Pause/Container/Buttons/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="GameOver/Container/Buttons/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="GameOver/Container/Buttons/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Victory/Container/Buttons/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Victory/Container/Buttons/Exit" to="." method="_on_exit_pressed"]
